force-app/main/default/objects/Document__c/fields/Access_Mode__c.field-meta.xml
<CustomField>
    <fullName>Access_Mode__c</fullName>
    <label>Access Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Local Read Only</fullName>
            </value>
            <value>
                <fullName>National Access Only</fullName>
            </value>
            <value>
                <fullName>National L2a/L3a Access Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>