force-app/main/default/objects/Document__c/fields/CEO_Email_text__c.field-meta.xml
<CustomField>
    <fullName>CEO_Email_text__c</fullName>
    <formula>Organization__r.CEO__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEO Email text</label>
    <type>Text</type>
</CustomField>