force-app/main/default/objects/Document__c/fields/FirstPic_National_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>FirstPic_National_Org_Code__c</fullName>
    <formula
  >IF(Organization__c != null, Organization__r.FirstPic_National_Org_Code__c,  
IF(Grant__c != null, Grant__r.FirstPic_National_Org_Code__c, 
IF(Reimbursement__c != null, Reimbursement__r.FirstPic_National_Org_Code__c,
IF(Session_Report__c != null, Session_Report__r.FirstPic_National_Org_Code__c,
&apos;&apos;))))</formula>
    <label>FirstPic National Org Code</label>
    <type>Text</type>
</CustomField>