force-app/main/default/objects/Document__c/fields/Grant__c.field-meta.xml
<CustomField>
    <fullName>Grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grant</label>
    <referenceTo>Grant__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>