force-app/main/default/objects/Document__c/fields/Has_Attachments__c.field-meta.xml
<CustomField>
    <fullName>Has_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Attachment(s)</label>
    <type>Checkbox</type>
</CustomField>