force-app/main/default/objects/Document__c/fields/Local_Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Local_Organization_Id__c</fullName>
    <formula>Organization__r.Local_Organization_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Organization Id</label>
    <type>Text</type>
</CustomField>