force-app/main/default/objects/Document__c/fields/Modification_History__c.field-meta.xml
<CustomField>
    <fullName>Modification_History__c</fullName>
    <label>Modification History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>