force-app/main/default/objects/Document__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <formula>IF(Assessment__c != null, &apos;Assessment&apos;,
IF(Grant__c  != null, &apos;Grant&apos;,
IF(Reimbursement__c  != null, &apos;Reimbursement&apos;,
IF(Session_Report__c  != null, &apos;Session Report&apos;, 
&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Object Type</label>
    <type>Text</type>
</CustomField>