force-app/main/default/objects/Document__c/fields/Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Organization_Id__c</fullName>
    <formula>TEXT(Organization__r.BBBS_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Organization Id</label>
    <type>Text</type>
</CustomField>