force-app/main/default/objects/Document__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <formula>IF(Organization__c != null, Organization__r.Name, 
IF(Assessment__c != null,  Assessment__r.Organization_Name__c, 
IF(Grant__c != null, Grant__r.Organization_Name__c, 
IF(Reimbursement__c != null, Reimbursement__r.Organization__c, 
IF(Session_Report__c != null, Session_Report__r.Site_Name__c, 
&apos;&apos;)))))</formula>
    <label>Organization Name</label>
    <type>Text</type>
</CustomField>