force-app/main/default/objects/Document__c/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <formula>CASE(Object_Type__c, 
&apos;Grant&apos;, Grant__r.Name,
&apos;Assessment&apos;, Assessment__r.Name,
&apos;Reimbursement&apos;, Reimbursement__r.Name,
&apos;Session Report&apos;, Session_Report__r.Name,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Name</label>
    <type>Text</type>
</CustomField>