force-app/main/default/objects/Document__c/fields/Previous_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Due_Date__c</fullName>
    <label>Previous Due Date</label>
    <type>Date</type>
</CustomField>