force-app/main/default/objects/Document__c/fields/Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reimbursement</label>
    <referenceTo>Reimbursement_Request__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>