force-app/main/default/objects/Document__c/fields/Session_Report__c.field-meta.xml
<CustomField>
    <fullName>Session_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Report</label>
    <referenceTo>Session_Report__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>Documents</relationshipName>
    <type>Lookup</type>
</CustomField>