force-app/main/default/objects/Document__c/fields/Status_Updated_by_Admin_Only__c.field-meta.xml
<CustomField>
    <fullName>Status_Updated_by_Admin_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Status Updated by Admin Only</label>
    <type>Checkbox</type>
</CustomField>