force-app/main/default/objects/Document__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <formula>IF(Assessment__c != null, TEXT(Assessment__r.Year__c), 
IF(Grant__c != null, Grant__r.Year__c, 
&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>