force-app/main/default/objects/Document__c/listViews/Assessment_Documents.listView-meta.xml
<ListView>
    <fullName>Assessment_Documents</fullName>
    <columns>NAME</columns>
    <columns>Organization_Name__c</columns>
    <columns>Assessment__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Type__c</field>
        <operation>equals</operation>
        <value>Assessment</value>
    </filters>
    <label>Assessment Documents</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>