force-app/main/default/objects/Document__c/listViews/Grant_Documents.listView-meta.xml
<ListView>
    <fullName>Grant_Documents</fullName>
    <columns>NAME</columns>
    <columns>Organization_Name__c</columns>
    <columns>Grant__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Type__c</field>
        <operation>equals</operation>
        <value>Grant</value>
    </filters>
    <filters>
        <field>FirstPic_National_Org_Code__c</field>
        <operation>equals</operation>
        <value>NCAI</value>
    </filters>
    <label>Grant Documents</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>