force-app/main/default/objects/Document__c/listViews/NCAI_Documents.listView-meta.xml
<ListView>
    <fullName>NCAI_Documents</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FirstPic_National_Org_Code__c</field>
        <operation>equals</operation>
        <value>NCAI</value>
    </filters>
    <label>NCAI Documents</label>
</ListView>