force-app/main/default/objects/Document__c/listViews/Organization_Documents.listView-meta.xml
<ListView>
    <fullName>Organization_Documents</fullName>
    <columns>NAME</columns>
    <columns>Organization_Name__c</columns>
    <columns>FirstPic_National_Org_Code__c</columns>
    <columns>Status__c</columns>
    <columns>Group_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Type__c</field>
        <operation>equals</operation>
    </filters>
    <label>Organization Documents</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>