force-app/main/default/objects/Document__c/listViews/SessionReport_Documents.listView-meta.xml
<ListView>
    <fullName>SessionReport_Documents</fullName>
    <columns>NAME</columns>
    <columns>Organization_Name__c</columns>
    <columns>Session_Report__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Type__c</field>
        <operation>equals</operation>
        <value>Session Report</value>
    </filters>
    <label>Session Report Documents</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>