force-app/main/default/objects/Document__c/listViews/TRAIL_Documents.listView-meta.xml
<ListView>
    <fullName>TRAIL_Documents</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FirstPic_National_Org_Code__c</field>
        <operation>equals</operation>
        <value>NCAI</value>
    </filters>
    <label>TRAIL Documents</label>
</ListView>